UI: Main view padding to prevent footer overlap.

--- a/angular-ui/src/app/components/main-view/main-view.component.scss
+++ b/angular-ui/src/app/components/main-view/main-view.component.scss
@@ -35,6 +35,7 @@ div.main-view {
     bottom: 0;
     left: 0;
     right: 0;
+    padding-bottom: 50px;
   }
   
   mat-nav-list {
